Maven tests dependency added